[package]
name = "wasm-convert"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tomvoet/wasm-convert"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.1"
js-sys = "0.3.61"
thiserror = "1.0.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = ['Blob']

[profile.release]
lto = true
opt-level = "s"
